alteração src imagem

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <a href="#" class="botao">Ver mais</a>
         </div>
 
-        <img src="img/bicicleta.jpg" alt="Bicicleta bikecraft preta" title="Bicicleta bikecraft preta">
+        <img src="/img/bicicleta.jpg" alt="Bicicleta bikecraft preta" title="Bicicleta bikecraft preta">
 
         <h2 class="subtitulo">Vantagens bikecraft</h2>
 
