Alteração dos caminhos das imagens

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="container">
     <div class="logo">
-        <img src="/img/bikcraft.svg" alt="Bikecraft" title="Bikecraft">
+        <img src="assets/bikcraft.svg" alt="Bikecraft" title="Bikecraft">
     </div>
     <div class="menu">
         <a href="#">Sobre</a>
@@ -27,27 +27,27 @@
             <a href="#" class="botao">Ver mais</a>
         </div>
 
-        <img src="/img/bicicleta.jpg" alt="Bicicleta bikecraft preta" title="Bicicleta bikecraft preta">
+        <img src="assets/bicicleta.jpg" alt="Bicicleta bikecraft preta" title="Bicicleta bikecraft preta">
 
         <h2 class="subtitulo">Vantagens bikecraft</h2>
 
         <div class="vantagens">
             <div class="vantagens-item">
-                <img src="/img/eletrica.svg" alt="">
+                <img src="assets/eletrica.svg" alt="">
                 <h3>Motor elétrico</h3>
                 <p>
                     Permite você viajar distâncias inimagináveis com a sua bike.
                 </p>
             </div>
             <div class="vantagens-item">
-                <img src="/img/velocidade.svg" alt="">
+                <img src="assets/velocidade.svg" alt="">
                 <h3>40 km/h</h3>
                 <p>
                     A bicicleta elétrica mais rápida hoje no mercado.
                 </p>
             </div>
             <div class="vantagens-item">
-                <img src="/img/rastreador.svg" alt="">
+                <img src="assets/rastreador.svg" alt="">
                 <h3>Rastreador</h3>
                 <p>
                     Rastreador e sistema anti-furto para garantir o seu sossego.
