Add media queries

--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
                 <a href="#" class="botao">Ver mais</a>
             </div>
 
-            <!-- aria hidden ignora a imagem para o leitor de tela já que ela é apenas decorativa -->
-            <img src="assets/bicicleta.jpg" alt="Bicicleta bikecraft preta" title="Bicicleta bikecraft preta" aria-hidden="true">
+            <div class="conteudo-cover">
+                <!-- aria hidden ignora a imagem para o leitor de tela já que ela é apenas decorativa -->
+                <img src="assets/bicicleta.jpg" alt="Bicicleta bikecraft preta" title="Bicicleta bikecraft preta" aria-hidden="true">
+            </div>
         </article>
-        <article class="conteudo" aria-labelledby="label-vantagens">
+        <article class="conteudo conteudo-vantagem" aria-labelledby="label-vantagens">
             <h2 class="subtitulo" id="label-vantagens">Vantagens bikecraft</h2>
         
             <ul class="vantagens">
